# LLMOPS

./: .env  .gitignore  ai.txt  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: ci.yaml
data/: goldens.csv
faiss_index/session_20251106_165207_25d69f89/: index.pkl  ingested_meta.json
faiss_index/session_20251107_090708_cad2adc0/: index.faiss  index.pkl  ingested_meta.json
faiss_index/session_20251107_090908_678d727e/: index.pkl  ingested_meta.json
faiss_index/session_20251108_091052_04ed5a8e/: index.faiss  index.pkl  ingested_meta.json
multi_doc_chat/config/: config.yaml
multi_doc_chat/logger/: __init__.py
multi_doc_chat/src/document_ingestion/: data_ingestion.py
multi_doc_chat/utils/: model_loader.py
notebooks/: RAG.ipynb  evaluation.ipynb
static/: styles.css
templates/: index.html
tests/: conftest.py
